--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   </head>
 
   <body>
-    elsas test 
-    <div class="wrapper">
+    elsas test
+    <div id="wrapper"
 
-    <!-- Rubriken -->
-    <h1 class="rubrik">MUFFINS!</h1>
-    <!-- Biden -->
-    <header>
-      <p>Här lär du dig allt om muffins!</p>
-        <img id="bild"src="img/muffin.jpg" alt="Muffins" class="center">
-    </header>
+      <header>
+        <h1 id="rubrik">Elsas hemsida</h1>
+
+      </header>
+
     <nav>
-<a href="https://www.arla.se/recept/muffins/" id="länk"class="center">RECEPT HÄR:</a>
+<a href="https://www.arla.se/recept/muffins/" class="center">RECEPT PÅ MUFFINS:</a>
     </nav>
-    <div class="mainwrapper">
+    <div id="mainwrapper">
     <main>
-
+      <img src="img/hatt.jpg" alt="hatt">
+      main
     </main>
     <aside class="">
       aside
